// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<CloudRegionComboBox /> when region list needs to be fetched renders correctly 1`] = `
<CloudRegionComboBox
  availableRegions={
    Array [
      Object {
        "ccs_only": false,
        "display_name": "N. Virginia",
        "enabled": true,
        "id": "us-east-1",
        "supports_multi_az": true,
      },
      Object {
        "ccs_only": false,
        "display_name": "Ireland",
        "enabled": true,
        "id": "eu-west-1",
        "supports_multi_az": true,
      },
      Object {
        "ccs_only": false,
        "display_name": "Antarctica",
        "enabled": true,
        "id": "single-az-3",
        "supports_multi_az": false,
      },
    ]
  }
  cloudProviderID="aws"
  cloudProviders={
    Object {
      "error": false,
      "errorMessage": "",
      "fulfilled": false,
      "pending": false,
      "providers": Object {},
    }
  }
  disabled={false}
  handleCloudRegionChange={
    [MockFunction] {
      "calls": Array [
        Array [],
      ],
      "results": Array [
        Object {
          "type": "return",
          "value": undefined,
        },
      ],
    }
  }
  input={
    Object {
      "onChange": [MockFunction] {
        "calls": Array [
          Array [
            "us-east-1",
          ],
        ],
        "results": Array [
          Object {
            "type": "return",
            "value": undefined,
          },
        ],
      },
    }
  }
  isMultiAz={false}
>
  <div
    className="spinner-fit-container"
  >
    <Spinner>
      <div
        className="ins-c-spinner"
        role="status"
      >
        <span
          className="pf-u-screen-reader"
        >
          Loading...
        </span>
      </div>
    </Spinner>
  </div>
  <div
    className="spinner-loading-text"
  >
    Loading region list...
  </div>
</CloudRegionComboBox>
`;

exports[`<CloudRegionComboBox /> when the region list is available renders correctly 1`] = `
<CloudRegionComboBox
  availableRegions={
    Array [
      Object {
        "ccs_only": false,
        "display_name": "N. Virginia",
        "enabled": true,
        "id": "us-east-1",
        "supports_multi_az": true,
      },
      Object {
        "ccs_only": false,
        "display_name": "Ireland",
        "enabled": true,
        "id": "eu-west-1",
        "supports_multi_az": true,
      },
      Object {
        "ccs_only": false,
        "display_name": "Antarctica",
        "enabled": true,
        "id": "single-az-3",
        "supports_multi_az": false,
      },
    ]
  }
  cloudProviderID="aws"
  cloudProviders={
    Object {
      "error": false,
      "errorMessage": "",
      "fulfilled": true,
      "pending": false,
      "providers": Object {
        "aws": Object {
          "regions": Object {
            "disabled-2": Object {
              "ccs_only": false,
              "display_name": "Kamchatka",
              "enabled": false,
              "id": "disabled-2",
              "supports_multi_az": true,
            },
            "eu-west-1": Object {
              "ccs_only": false,
              "display_name": "Ireland",
              "enabled": true,
              "id": "eu-west-1",
              "supports_multi_az": true,
            },
            "single-az-3": Object {
              "ccs_only": false,
              "display_name": "Antarctica",
              "enabled": true,
              "id": "single-az-3",
              "supports_multi_az": false,
            },
            "us-east-1": Object {
              "ccs_only": false,
              "display_name": "N. Virginia",
              "enabled": true,
              "id": "us-east-1",
              "supports_multi_az": true,
            },
          },
        },
      },
    }
  }
  disabled={false}
  handleCloudRegionChange={[MockFunction]}
  input={
    Object {
      "onChange": [MockFunction],
      "value": "eu-west-1",
    }
  }
  isMultiAz={false}
>
  <FormSelect
    aria-label="Region"
    className="cloud-region-combo-box"
    isDisabled={false}
    isIconSprite={false}
    isRequired={false}
    onBlur={[Function]}
    onChange={[Function]}
    onFocus={[Function]}
    ouiaSafe={true}
    validated="default"
    value="eu-west-1"
  >
    <select
      aria-invalid={false}
      aria-label="Region"
      className="pf-c-form-control cloud-region-combo-box"
      data-ouia-component-id="OUIA-Generated-FormSelect-default-1"
      data-ouia-component-type="PF4/FormSelect"
      data-ouia-safe={true}
      disabled={false}
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      required={false}
      value="eu-west-1"
    >
      <FormSelectOption
        isDisabled={false}
        key="us-east-1"
        label="us-east-1, N. Virginia"
        value="us-east-1"
      >
        <option
          className=""
          disabled={false}
          value="us-east-1"
        >
          us-east-1, N. Virginia
        </option>
      </FormSelectOption>
      <FormSelectOption
        isDisabled={false}
        key="eu-west-1"
        label="eu-west-1, Ireland"
        value="eu-west-1"
      >
        <option
          className=""
          disabled={false}
          value="eu-west-1"
        >
          eu-west-1, Ireland
        </option>
      </FormSelectOption>
      <FormSelectOption
        isDisabled={false}
        key="single-az-3"
        label="single-az-3, Antarctica"
        value="single-az-3"
      >
        <option
          className=""
          disabled={false}
          value="single-az-3"
        >
          single-az-3, Antarctica
        </option>
      </FormSelectOption>
    </select>
  </FormSelect>
</CloudRegionComboBox>
`;

exports[`<CloudRegionComboBox /> when the request is pending renders correctly 1`] = `
<CloudRegionComboBox
  availableRegions={
    Array [
      Object {
        "ccs_only": false,
        "display_name": "N. Virginia",
        "enabled": true,
        "id": "us-east-1",
        "supports_multi_az": true,
      },
      Object {
        "ccs_only": false,
        "display_name": "Ireland",
        "enabled": true,
        "id": "eu-west-1",
        "supports_multi_az": true,
      },
      Object {
        "ccs_only": false,
        "display_name": "Antarctica",
        "enabled": true,
        "id": "single-az-3",
        "supports_multi_az": false,
      },
    ]
  }
  cloudProviderID="aws"
  cloudProviders={
    Object {
      "error": false,
      "errorMessage": "",
      "fulfilled": false,
      "pending": true,
      "providers": Object {},
    }
  }
  disabled={false}
  handleCloudRegionChange={
    [MockFunction] {
      "calls": Array [
        Array [],
      ],
      "results": Array [
        Object {
          "type": "return",
          "value": undefined,
        },
      ],
    }
  }
  input={
    Object {
      "onChange": [MockFunction] {
        "calls": Array [
          Array [
            "us-east-1",
          ],
        ],
        "results": Array [
          Object {
            "type": "return",
            "value": undefined,
          },
        ],
      },
    }
  }
  isMultiAz={false}
>
  <div
    className="spinner-fit-container"
  >
    <Spinner>
      <div
        className="ins-c-spinner"
        role="status"
      >
        <span
          className="pf-u-screen-reader"
        >
          Loading...
        </span>
      </div>
    </Spinner>
  </div>
  <div
    className="spinner-loading-text"
  >
    Loading region list...
  </div>
</CloudRegionComboBox>
`;

exports[`<CloudRegionComboBox /> when there was an error renders correctly 1`] = `
<CloudRegionComboBox
  availableRegions={
    Array [
      Object {
        "ccs_only": false,
        "display_name": "N. Virginia",
        "enabled": true,
        "id": "us-east-1",
        "supports_multi_az": true,
      },
      Object {
        "ccs_only": false,
        "display_name": "Ireland",
        "enabled": true,
        "id": "eu-west-1",
        "supports_multi_az": true,
      },
      Object {
        "ccs_only": false,
        "display_name": "Antarctica",
        "enabled": true,
        "id": "single-az-3",
        "supports_multi_az": false,
      },
    ]
  }
  cloudProviderID="aws"
  cloudProviders={
    Object {
      "error": true,
      "errorMessage": "This is an error message",
      "fulfilled": false,
      "pending": false,
      "providers": Object {},
    }
  }
  disabled={false}
  handleCloudRegionChange={
    [MockFunction] {
      "calls": Array [
        Array [],
      ],
      "results": Array [
        Object {
          "type": "return",
          "value": undefined,
        },
      ],
    }
  }
  input={
    Object {
      "onChange": [MockFunction] {
        "calls": Array [
          Array [
            "us-east-1",
          ],
        ],
        "results": Array [
          Object {
            "type": "return",
            "value": undefined,
          },
        ],
      },
    }
  }
  isMultiAz={false}
>
  <ErrorBox
    message="Error loading region list"
    response={
      Object {
        "error": true,
        "errorMessage": "This is an error message",
        "fulfilled": false,
        "pending": false,
        "providers": Object {},
      }
    }
  >
    <Alert
      className="error-box"
      isInline={true}
      role="alert"
      title="Error loading region list"
      variant="danger"
    >
      <div
        aria-label="Danger Alert"
        className="pf-c-alert pf-m-inline pf-m-danger error-box"
        data-ouia-component-id="OUIA-Generated-Alert-danger-1"
        data-ouia-component-type="PF4/Alert"
        data-ouia-safe={true}
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        role="alert"
      >
        <AlertIcon
          variant="danger"
        >
          <div
            className="pf-c-alert__icon"
          >
            <ExclamationCircleIcon
              color="currentColor"
              noVerticalAlign={false}
              size="sm"
            >
              <svg
                aria-hidden={true}
                aria-labelledby={null}
                fill="currentColor"
                height="1em"
                role="img"
                style={
                  Object {
                    "verticalAlign": "-0.125em",
                  }
                }
                viewBox="0 0 512 512"
                width="1em"
              >
                <path
                  d="M504 256c0 136.997-111.043 248-248 248S8 392.997 8 256C8 119.083 119.043 8 256 8s248 111.083 248 248zm-248 50c-25.405 0-46 20.595-46 46s20.595 46 46 46 46-20.595 46-46-20.595-46-46-46zm-43.673-165.346l7.418 136c.347 6.364 5.609 11.346 11.982 11.346h48.546c6.373 0 11.635-4.982 11.982-11.346l7.418-136c.375-6.874-5.098-12.654-11.982-12.654h-63.383c-6.884 0-12.356 5.78-11.981 12.654z"
                />
              </svg>
            </ExclamationCircleIcon>
          </div>
        </AlertIcon>
        <h4
          className="pf-c-alert__title"
        >
          <span
            className="pf-u-screen-reader"
          >
            Danger alert:
          </span>
          Error loading region list
        </h4>
        <div
          className="pf-c-alert__description"
        >
          <span>
            This is an error message
          </span>
          <br />
          <span>
            Operation ID: N/A
          </span>
        </div>
      </div>
    </Alert>
  </ErrorBox>
</CloudRegionComboBox>
`;
